--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <main class="flex">
-      <h2>Esta página contiene una app</h2>
+<!--       <h2>Esta página contiene una app</h2> -->
     </main>
+    <nav id="navegador"></nav>
     
     <script src="./scripts/index.js"></script>
   </body>
